Get rid of StreamEx dependency